# stable_memory_allocator_bug_illustration

./: README.md  dfx.json
src/backend/: Cargo.toml  backend.did  backend.old.did
src/backend/src/: lib.rs  test.rs
